--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-19
 android.library.reference.1=..\\..\\..\\android\\workspace\\appcompat_v7
-android.library.reference.2=../facebook
+android.library.reference.2=..\\facebook
+android.library.reference.3=../../sample/Android-Universal-Image-Loader-master/library
